<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>net.tascalate.instrument</groupId>
	<artifactId>net.tascalate.instrument.parent</artifactId>
	<version>1.1.0</version>
	<packaging>pom</packaging>

	<name>Tascalate Instrument</name>
	<url>https://github.com/vsilaev/tascalate-instrument</url>
	<description>Multi-version utility classes to develop / use with Java Agents with Java 8 - 11+</description>

	<licenses>
		<license>
			<name>The Apache License, Version 2.0</name>
			<url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
		</license>
	</licenses>
	<scm>
		<connection>scm:git:git://github.com/vsilaev/tascalate-instrument.git</connection>
		<developerConnection>scm:git:ssh://github.com:vsilaev/tascalate-instrument.git</developerConnection>
		<url>https://github.com/vsilaev/tascalate-instrument.git</url>
	</scm>

	<developers>
		<developer>
			<id>vsilaev</id>
			<name>Valery Silaev</name>
			<email>vsilaev at java.net</email>
		</developer>
	</developers>

	<contributors>
		<contributor>
			<name>Valery Silaev</name>
			<email>vsilaev at java.net</email>
		</contributor>
	</contributors>


	<modules>
		<module>net.tascalate.instrument.emitter6</module>
		<module>net.tascalate.instrument.emitter7</module>
		<module>net.tascalate.instrument.emitter9</module>
		<module>net.tascalate.instrument.emitter11</module>
		<module>net.tascalate.instrument.emitter</module>
		<module>net.tascalate.instrument.attach9</module>
		<module>net.tascalate.instrument.attach</module>
		<module>net.tascalate.instrument.examples.app8</module>
		<module>net.tascalate.instrument.examples.app9simple</module>
		<module>net.tascalate.instrument.examples.moduleA</module>
		<module>net.tascalate.instrument.examples.moduleB</module>
		<module>net.tascalate.instrument.examples.app9modular</module>
		<module>net.tascalate.instrument.examples.load8</module>
		<module>net.tascalate.instrument.examples.load9</module>
	</modules>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<license.header>../LICENSE</license.header>
		<jna.version>5.8.0</jna.version>
	</properties>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>org.slf4j</groupId>
				<artifactId>slf4j-api</artifactId>
				<version>1.8.0-beta2</version>
			</dependency>
			<dependency>
				<groupId>org.slf4j</groupId>
				<artifactId>slf4j-simple</artifactId>
				<version>1.8.0-beta2</version>
				<scope>runtime</scope>
			</dependency>
			<dependency>
				<groupId>junit</groupId>
				<artifactId>junit</artifactId>
				<version>4.13.1</version>
				<scope>test</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<distributionManagement>
		<snapshotRepository>
			<id>ossrh</id>
			<url>https://oss.sonatype.org/content/repositories/snapshots</url>
		</snapshotRepository>
		<repository>
			<id>ossrh</id>
			<url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
		</repository>
	</distributionManagement>

	<profiles>
		<profile>
			<id>release</id>
			<pluginRepositories>
				<pluginRepository>
					<id>maven-snapshots</id>
					<name>Apache Maven Snapshots</name>
					<url>https://repository.apache.org/content/repositories/snapshots/</url>
					<releases>
						<enabled>false</enabled>
					</releases>
					<snapshots>
						<enabled>true</enabled>
					</snapshots>
				</pluginRepository>
			</pluginRepositories>
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-source-plugin</artifactId>
						<version>3.0.1</version>
						<executions>
							<execution>
								<id>attach-sources</id>
								<goals>
									<goal>jar</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-javadoc-plugin</artifactId>
						<version>3.1.0-SNAPSHOT</version>
						<executions>
							<execution>
								<id>attach-javadocs</id>
								<goals>
									<goal>jar</goal>
								</goals>
								<configuration>
									<release>9</release>
								</configuration>
							</execution>
						</executions>
						<configuration> 
							<release>9</release> 
						</configuration>
					</plugin>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-gpg-plugin</artifactId>
						<version>1.6</version>
						<executions>
							<execution>
								<id>sign-artifacts</id>
								<phase>verify</phase>
								<goals>
									<goal>sign</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
					<plugin>
						<groupId>org.codehaus.mojo</groupId>
						<artifactId>animal-sniffer-maven-plugin</artifactId>
						<version>1.17</version>
						<executions>
							<execution>
								<id>check-api</id>
								<phase>package</phase>
								<goals>
									<goal>check</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>

	<build>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-jar-plugin</artifactId>
					<version>3.1.1</version>
				</plugin>
				<plugin>
					<groupId>org.moditect</groupId>
					<artifactId>moditect-maven-plugin</artifactId>
					<version>1.0.0.Beta2</version>
				</plugin>
			</plugins>
		</pluginManagement>
		<plugins>
			<!--
			<plugin>
				<groupId>com.mycila</groupId>
				<artifactId>license-maven-plugin</artifactId>
				<version>3.0</version>
				<configuration>
					<aggregate>true</aggregate>
					<includes>
						<include>**/*.java</include>
					</includes>
				</configuration>
				<executions>
					<execution>
						<goals>
							<goal>check</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			-->
			<plugin>
				<groupId>org.sonatype.plugins</groupId>
				<artifactId>nexus-staging-maven-plugin</artifactId>
				<version>1.6.8</version>
				<extensions>true</extensions>
				<configuration>
					<serverId>ossrh</serverId>
					<nexusUrl>https://oss.sonatype.org/</nexusUrl>
					<autoReleaseAfterClose>false</autoReleaseAfterClose>
				</configuration>
			</plugin> 
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.0</version>
				<configuration>
					<source>9</source>
					<target>9</target>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-shade-plugin</artifactId>
				<version>3.2.1</version>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.22.1</version>
				<configuration>
					<includes>
						<include>**/*TestSuite.java</include>
					</includes>
					<excludes>
						<exclude>**/Abstract*</exclude>
					</excludes>
					<testFailureIgnore>true</testFailureIgnore>
				</configuration>
			</plugin>
		</plugins>
	</build>

</project>
